[tool.poetry]
name = "quantum-safe-financial-system"
version = "0.1.0"
description = "A quantum-safe financial system implementing post-quantum cryptography with Kyber for secure financial transactions"
authors = ["Nirmal Boghara, Kyle Wang, Whit Boland, Shounak Ghosh"]
license = "MIT"
readme = "README.md"
keywords = [
    "quantum-safe",
    "cryptography",
    "post-quantum",
    "kyber",
    "financial-security",
    "aes-gcm",
    "quantum-resistant"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
liboqs-python = "^0.8.0"  # For quantum-safe cryptography (oqs)
cryptography = "^42.0.0"  # For AES-GCM encryption
typing-extensions = "^4.8.0"
concurrent-log-handler = "^0.9.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
multi-line-output = 3
